criei a tela home

--- a/index.html
+++ b/index.html
@@ -3,17 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="pacote-d013/pacote-d013/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="estilos/styles.css">
-    <title>Projeto Redes Sociais</title>
+    <title>Redes Sociais</title>
+    <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
     <main>
         <section id="telefone">
             <iframe src="home.html" name="tela" id="tela" frameborder="0"></iframe>
         </section>
-        <section id="redes-sociais">
 
+        <section id="rede-sociais">
+            <a href="#"><img src="imagens/logo-facebook.jpg" alt="Facebook"></a>
         </section>
     </main>
 </body>
